# Kalima

./: .gitignore  ARCHIVE.md  Background.txt  Book of Relevant Invocations.md  Bookmarks.docx  Bookmarks.md  CHANGELOG.md  CLI Design.txt  Codex Vitae.docx  Crystal Codex.md  Dockerfile  Marvelous Quran Tools.docx  Marvelous Quran Tools.md  Meaningful Music.md  New Model for Global Transformation.md  Project Breakdown.docx  QUICKSTART.md  README.md  REFACTORING-SUMMARY.md  Reflection Template.md  STRUCTURE.md  TESTING.md  The Program.drawio  add_annotation.bat  app.py  build-cli.bat  djin.bat  docker-compose.yml  kalima.db-shm  kalima.db-wal  new-note.md  package-lock.json  package.json  playwright.config.ts  portals.md  rebuild-desktop.bat  run-cli.bat  run-desktop.bat  test-1-1.json  test-12-1.json  (+9 more)
.claude/: settings.local.json
.obsidian/: app.json  graph.json  workspace.json
0. Linguistics/: Beyond Reason.md  Layl.md  QuranLexicon.drawio  RoadMap.txt  What's with the Kitaab.md  is rationality grounded in empirica.md
0. Quran/: quran_patterns.db  ~$rvelous Quran Tools.docx
0. The God/: Quran Software.txt  The Marvelous Quran.txt
1. Chapters/: Decisions in The Expert  Problem Solving Process.md  Project Ideas.md
1. Cognitive Science/: .$Attribute Tracker.drawio.bkp  Attribute Tracker.drawio  Consuming Suffering.md  I Seek from Others Things We Don't Have.md  Node Manager.md  Personal Health.md  The SuperStory.md  evaluation_framework.md
1. Self/: notesManager.py
1. The Self/: A Substantial Story.md  Brain and the world.docx  Marvelous Quran analysis.docx  Natural Patterns.md  Thought Architecture.md  (+2 more)
engine/: Cargo.toml
engine/api/: Cargo.toml
engine/api/src/: config.rs  lib.rs
engine/api/src/handlers/: mod.rs  morphology.rs  pattern.rs  research.rs  search.rs  util.rs  verse.rs
engine/api/tests/: golden.rs
engine/cli/: Cargo.toml
engine/cli/src/: main.rs
engine/common/: Cargo.toml
engine/common/src/: lib.rs
engine/kalima-api/: Cargo.toml
engine/kalima-api/src/: lib.rs  main.rs
engine/kalima-api/tests/: golden.rs
engine/kalima-core/: Cargo.toml
engine/kalima-core/src/: lib.rs
engine/kalima-index/: .managed.json  Cargo.toml  meta.json
engine/kalima-index/kalima-index-test-local/: .managed.json  meta.json
engine/kalima-index/src/: lib.rs
engine/kalima-index/tests/: permissions_test.rs
engine/kalima-store/: Cargo.toml
engine/kalima-store/src/: lib.rs
engine/search/: Cargo.toml
engine/search/src/: lib.rs
engine/search/tests/: permissions_test.rs
engine/store/: Cargo.toml
engine/store/src/: lib.rs
(+280 files in other folders)
