[workspace]
members = [
    "common",
    "store",
    "search",
    "api",
    "cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Kalima Dev Team"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.7"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "uuid", "json"] }
tantivy = "0.22"
tempfile = "3"
structopt = "0.3"
tower-http = { version = "0.5", features = ["fs"] }
