[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
store = { path = "../store" }
search = { path = "../search" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
uuid.workspace = true
structopt.workspace = true
anyhow.workspace = true
tempfile.workspace = true
tower-http.workspace = true
chrono = "0.4"
regex = "1.10"
