[package]
name = "kalima-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rustyline = "13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
anyhow = "1"
colored = "2"
urlencoding = "2"
minus = { version = "5.5", features = ["static_output"] }

