[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
anyhow.workspace = true
sqlx.workspace = true
uuid.workspace = true
